<resources>
    <string name="arg">Pinned</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110001">6 months ago</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110002">%1$s download failed</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110003">%1$s installation complete</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110004">%1$s is up to date.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110005">%1$s Version History</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110006">Navigate home</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110007">Navigate up</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110008">More options</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110009">Done</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11000a">See all</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11000b">Choose an app</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11000c">OFF</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11000d">ON</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11000e">Alt+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11000f">Ctrl+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110010">delete</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110011">enter</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110012">Function+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110013">Meta+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110014">Shift+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110015">space</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110016">Sym+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110017">Menu+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110018">Search…</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110019">Clear query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11001a">Search query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11001b">Search</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11001c">Submit query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11001d">Voice search</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11001e">Share with</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11001f">Share with %s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110020">Collapse</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110021">Abnormal</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110022">About</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110023">Infos</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110024">Send Log</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110025">" &lt;b>Version:&lt;/b> %1$s&lt;br>&lt;br>&lt;b>Website:&lt;/b> &lt;a href=%2$s>%2$s&lt;/a>&lt;br>&lt;b>Email:&lt;/b> &lt;a href=mailto:%3$s>%3$s&lt;/a> "</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110026">About %1$s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110027">Management</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110028">Settings</string>
    <string name="ad_load_failed">Failed to get the AD, please try again later</string>
    <string name="ad_loading">ad loading…</string>
    <string name="ad_no_rewarded">The video ad needs to play full to unlock the template</string>
    <string name="ad_tip">ad</string>
    <string name="ad_wall_cms_url_key">AdWallUrl</string>
    <string name="add">Add</string>
    <string name="add_download_task_click_look">Added to download list</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110030">APKPure</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110031">AFRICA</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110032">EG</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110033">ZA</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110034">Camera</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110035">Cancel</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110036">Tap to continue</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110037">Coming soon to download the file</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110038">Downloading:%s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110039">Download</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11003a">Download failed!</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11003b">The task already exists, do not repeat click to download!</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11003c">Files</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11003d">Download</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11003e">Wi-Fi disconnected. Continue the download via mobile data network?</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11003f">Go away</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110040">leaving %s and opening another app?</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110041">Loading ...</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110042">The selected file can not be larger than %s MB</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110043">Note</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110044">You have a new notice</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110045">Agree</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110139">Categories</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11014a">Check for updates</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11014e">Official version</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1101ad">Contact Us</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1101c2">Data saver</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1101c3">Turning this on will reduce image size and quality to help use less cellular data.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1101cc" />
    <string name="APKTOOL_DUPLICATE_string_0x7f1101d9">Delete</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1101e3">Delete packages after installation</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1101f9">add</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1101fa">90% players choose ‘ADD’</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1101fb">Add minigames to Home</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1101fe">next time</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1101ff">Play now</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11020a">Download</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11020c">Installation option after download</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11020d">install_now</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110214">Install APK</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110215">Install OBB</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110217">Download path</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11021a">SD 1</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110222">Download via Wi-Fi only</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11025e">Favorite</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110297">General</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11029b">Auto-play GIFs on Wi-Fi</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11029c">GIF auto-play</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1102d5">Installation</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11030d">Language</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110320">Like notifications</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110321">Receive notifications of new Likes</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110362">Privacy Policy</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110393">Night Mode</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110395">COMMUNITY</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110399">Themes</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110445">Notifications</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11044f">Open in Browser</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110489">Pre-Register</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11049d">Properties</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110519">Ranking</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110534">api.pureapk.com</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110537">Remove from Favorites</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11053b">Replies notifications</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11053c">Receive notifications of new replies</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11053e">Report</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110578">Phone status notification</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110579">Receive notifications of junk cleaning</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11057a">Popular Recommendation</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11057b">Receive notifications of popular apps ets.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11057c">Contributor</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11057d">Open Source License</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11057e">Permissions</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110580">Shortcut Bar</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110581">Display shortcut entry</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110582">App updates available</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110583">Notify me when app updates are available. Recommended Setting: On</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110585">Region</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110589">Share</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11058e">Mini-Games</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110591">Show notification after installation</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1105c5">Lucky Green</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110601">Upload APK</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110603">Upload APK to group</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110613">Upload XAPK</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110614">Upload XAPK to group</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110650">Video auto-play via Wi-Fi only</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11065b">Copy Link</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11065c">Refresh</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1106b5">bigo_ad_tag_back</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1106b6">bigo_ad_tag_close</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1106b8">bigo_ad_tag_progressbar</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1106b9">bigo_ad_tag_title</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1106bd">Ask_me_each_time</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1106bf">Auto-Open Game After Booster Start</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110766">"You will lose your reward. 
Are you sure you want to close the ad now ?"</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110767">RESUME</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110768">Close Ad ?</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110769">CLOSE</string>
</resources>