<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/APKTOOL_DUPLICATE_id_0x7f090458" android:title="@string/APKTOOL_DUPLICATE_string_0x7f110215" />
    <item android:id="@id/APKTOOL_DUPLICATE_id_0x7f090457" android:title="@string/APKTOOL_DUPLICATE_string_0x7f110214" />
    <item android:id="@id/APKTOOL_DUPLICATE_id_0x7f09044d" android:title="@string/APKTOOL_DUPLICATE_string_0x7f1101d9" />
    <item android:id="@id/APKTOOL_DUPLICATE_id_0x7f09045c" android:title="@string/APKTOOL_DUPLICATE_string_0x7f11049d" />
    <item android:id="@id/APKTOOL_DUPLICATE_id_0x7f090465" android:title="@string/APKTOOL_DUPLICATE_string_0x7f110601" />
    <item android:id="@id/APKTOOL_DUPLICATE_id_0x7f090466" android:title="@string/APKTOOL_DUPLICATE_string_0x7f110603" />
    <item android:id="@id/APKTOOL_DUPLICATE_id_0x7f090467" android:title="@string/APKTOOL_DUPLICATE_string_0x7f110613" />
    <item android:id="@id/APKTOOL_DUPLICATE_id_0x7f090468" android:title="@string/APKTOOL_DUPLICATE_string_0x7f110614" />
</menu>