<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f08063a" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="182.0dip">
        <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="24.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f110768" android:layout_marginStart="30.0dip" />
        <TextView android:textSize="16.0sp" android:textColor="#ff757575" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/APKTOOL_DUPLICATE_dimen_0x7f0703fb" android:layout_marginTop="65.0dip" android:layout_marginRight="@dimen/APKTOOL_DUPLICATE_dimen_0x7f0703fb" android:text="@string/APKTOOL_DUPLICATE_string_0x7f110766" android:singleLine="false" android:layout_marginStart="30.0dip" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="143.0dip">
            <Button android:textSize="14.0sp" android:textColor="#ff999990" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0905cf" android:background="#ffffffff" android:layout_width="80.0dip" android:layout_height="26.0dip" android:layout_marginRight="15.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f110769" android:layout_toLeftOf="@id/APKTOOL_DUPLICATE_id_0x7f0905ce" android:layout_marginEnd="15.0dip" android:layout_toStartOf="@id/APKTOOL_DUPLICATE_id_0x7f0905ce" />
            <Button android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0905ce" android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f0805fd" android:layout_width="90.0dip" android:layout_height="26.0dip" android:layout_marginRight="14.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f110767" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginEnd="14.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>