<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/APKTOOL_DUPLICATE_id_0x7f090720" android:background="?APKTOOL_DUPLICATE_attr_0x7f0404f2" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0906d4" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0905e2" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070094" android:textStyle="bold" android:ellipsize="end" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0903df" android:paddingLeft="26.0dip" android:paddingRight="26.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f1101fb" />
            <TextView android:textSize="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070090" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f090708" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="12.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f1101fa" />
            <FrameLayout android:layout_width="360.0dip" android:layout_height="220.0dip">
                <ImageView android:id="@id/APKTOOL_DUPLICATE_id_0x7f09055c" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                <TextView android:textSize="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070096" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f060341" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0904ab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="85.0dip" android:layout_marginTop="98.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f110030" android:layout_marginStart="85.0dip" />
                <TextView android:textSize="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070096" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f060341" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0904ac" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="132.0dip" android:layout_marginTop="98.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f11058e" android:layout_marginStart="132.0dip" />
                <TextView android:textSize="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07008e" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f060341" android:id="@id/APKTOOL_DUPLICATE_id_0x7f090b84" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="131.0dip" android:layout_marginTop="123.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f1101ff" android:layout_marginStart="131.0dip" />
            </FrameLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginBottom="12.0dip">
                <com.apkpure.aegon.widgets.textview.RoundTextView android:textSize="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070091" android:ellipsize="end" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f09065a" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="16.0dip" android:layout_marginRight="4.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f1101fe" android:lines="1" android:layout_weight="1.0" android:textAllCaps="true" android:layout_marginStart="16.0dip" android:layout_marginEnd="4.0dip" app:APKTOOL_DUPLICATE_attr_0x7f040398="8.0dip" app:APKTOOL_DUPLICATE_attr_0x7f04039e="false" app:APKTOOL_DUPLICATE_attr_0x7f0403a2="1.0dip" />
                <com.apkpure.aegon.widgets.textview.RoundTextView android:textSize="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070091" android:ellipsize="end" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f090b33" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="4.0dip" android:layout_marginRight="16.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f1101f9" android:lines="1" android:layout_weight="1.0" android:textAllCaps="true" android:layout_marginStart="4.0dip" android:layout_marginEnd="16.0dip" app:APKTOOL_DUPLICATE_attr_0x7f040398="8.0dip" app:APKTOOL_DUPLICATE_attr_0x7f04039e="false" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>